# framework-inputmodule-c

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
src/: InputModule.cxx  InputModule.hxx  ModuleEnums.hxx  inputmodule.cpp
tests/: CMakeLists.txt  test.cpp
